--- a/index.html
+++ b/index.html
@@ -32,5 +32,40 @@
 			<a href="produtos.html" class="btn">Orçamento</a>
 		</div>
 	</section>
+
+	<section class="produtos container"> 
+		<h2 class="sub-titulo">Produtos</h2>
+		<ul class="produtos-lista">
+			<li class="grid-1-3">
+				<div class="produtos-icone">
+					<img src="/img/produtos/passeio.svg" alt="Bikecraf passeio">
+				</div>
+				<h3>Passeio</h3>
+				<p>ainda assim, existem dúvidas a respeito de como a necessidade de renovação- texto ficticio </p>
+			</li>
+		</ul>		
+		<ul class="produtos-lista">
+			<li class="grid-1-3">
+				<div class="produtos-icone">
+					<img src="/img/produtos/esporte.svg" alt="Bikecraf passeio">
+				</div>
+				<h3>Esporte</h3>
+				<p>ainda assim, existem dúvidas a respeito de como a necessidade de renovação- texto ficticio </p>
+			</li>
+		</ul>
+		<ul class="produtos-lista">
+			<li class="grid-1-3">
+				<div class="produtos-icone">
+					<img src="/img/produtos/retro.svg" alt="Bikecraf passeio">
+				</div>
+				<h3>Retrô</h3>
+				<p>ainda assim, existem dúvidas a respeito de como a necessidade de renovação- texto ficticio </p>
+			</li>
+		</ul>
+		<div class="call">
+			<p>clique aqui e veja</p>
+			<a href="produtos.html" class="btn btn-black">Produtos</a>
+		</div>
+	</section>
 	</body>
 </html>
