--- a/index.html
+++ b/index.html
@@ -67,5 +67,20 @@
 			<a href="produtos.html" class="btn btn-black">Produtos</a>
 		</div>
 	</section>
+
+	<section class="portifolio">
+		<div class="container">
+			<h2 class="subtitulo sub-titulo">Portifólio</h2>
+			<ul>
+				<li class="grid-8"><img src="/img/portfolio/retro.jpg" alt="Bicicleta Retro"></li>
+				<li class="grid-8"><img src="/img/portfolio/passeio.jpg" alt="Bicicleta Passeio"></li>
+				<li class="grid-8"><img src="/img/portfolio/esporte.jpg" alt="Bicicleta Esporte"></li>
+			</ul>
+			<div class="call">
+				<p>clique aqui e veja</p>
+				<a href="portifolio.html" class="btn ">Portifólio</a>
+			</div>
+		</div>
+	</section>
 	</body>
 </html>
