--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	<section class="portifolio">
 		<div class="container">
 			<h2 class="subtitulo sub-titulo">Portifólio</h2>
-			<ul>
+			<ul class="portifolio-itens">
 				<li class="grid-8"><img src="/img/portfolio/retro.jpg" alt="Bicicleta Retro"></li>
 				<li class="grid-8"><img src="/img/portfolio/passeio.jpg" alt="Bicicleta Passeio"></li>
 				<li class="grid-8"><img src="/img/portfolio/esporte.jpg" alt="Bicicleta Esporte"></li>
