--- a/index.html
+++ b/index.html
@@ -1,86 +1,131 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-	<head>
-		<meta charset="utf-8">
-		<title>Bikcraft</title>
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/reset.css">
-		<link rel="stylesheet" href="css/grid.css">
-		<link rel="stylesheet" href="css/style.css">
-	</head>
-	<body>
-		<header class="header">
-			<div class="container">
-				<a href="index.html" class="grid-4"> <img src="img/bikcraft.svg" alt="Bikecraf"></a>
-				<nav class="grid-12 header_menu ">
-					<ul>
-						<li><a href="sobre.html">Sobre</a></li>
-						<li><a href="produtos.html">Produtos</a></li>
-						<li><a href="portifolio.html">Portifólio</a></li>
-						<li><a href="contato.html">Contato</a></li>
-					</ul>
-				</nav>
-			</div>
-		</header>
-	<section class="introducao">
-		<div class="container">
-			<h1>Bicicletas Feitas a Mão </h1>
-			<blockquote class="quote-externo">
-				<p>"não tenha nada em sua casa que você não considere útil ou acredita ser bonito"</p>
-				<cite>WILLIAM MORRIS</cite>
-			</blockquote>
-			<a href="produtos.html" class="btn">Orçamento</a>
-		</div>
-	</section>
+  <head>
+    <meta charset="utf-8" />
+    <title>Bikcraft</title>
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/grid.css" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="container">
+        <a href="index.html" class="grid-4">
+          <img src="img/bikcraft.svg" alt="Bikecraf"
+        /></a>
+        <nav class="grid-12 header_menu">
+          <ul>
+            <li><a href="sobre.html">Sobre</a></li>
+            <li><a href="produtos.html">Produtos</a></li>
+            <li><a href="portifolio.html">Portifólio</a></li>
+            <li><a href="contato.html">Contato</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
-	<section class="produtos container"> 
-		<h2 class="sub-titulo">Produtos</h2>
-		<ul class="produtos-lista">
+    <section class="introducao">
+      <div class="container">
+        <h1>Bicicletas Feitas a Mão</h1>
+        <blockquote class="quote-externo">
+          <p>
+            "não tenha nada em sua casa que você não considere útil ou acredita
+            ser bonito"
+          </p>
+          <cite>WILLIAM MORRIS</cite>
+        </blockquote>
+        <a href="produtos.html" class="btn">Orçamento</a>
+      </div>
+    </section>
+
+    <section class="produtos container">
+      <h2 class="sub-titulo">Produtos</h2>
+      <ul class="produtos-lista">
+        <li class="grid-1-3">
+          <div class="produtos-icone">
+            <img src="/img/produtos/passeio.svg" alt="Bikecraf passeio" />
+          </div>
+          <h3>Passeio</h3>
+          <p>
+            ainda assim, existem dúvidas a respeito de como a necessidade de
+            renovação- texto ficticio
+          </p>
+        </li>
+      </ul>
+      <ul class="produtos-lista">
+        <li class="grid-1-3">
+          <div class="produtos-icone">
+            <img src="/img/produtos/esporte.svg" alt="Bikecraf passeio" />
+          </div>
+          <h3>Esporte</h3>
+          <p>
+            ainda assim, existem dúvidas a respeito de como a necessidade de
+            renovação- texto ficticio
+          </p>
+        </li>
+      </ul>
+      <ul class="produtos-lista">
+        <li class="grid-1-3">
+          <div class="produtos-icone">
+            <img src="/img/produtos/retro.svg" alt="Bikecraf passeio" />
+          </div>
+          <h3>Retrô</h3>
+          <p>
+            ainda assim, existem dúvidas a respeito de como a necessidade de
+            renovação- texto ficticio
+          </p>
+        </li>
+      </ul>
+      <div class="call">
+        <p>clique aqui e veja</p>
+        <a href="produtos.html" class="btn btn-black">Produtos</a>
+      </div>
+    </section>
+
+    <section class="portifolio">
+      <div class="container">
+        <h2 class="subtitulo sub-titulo">Portifólio</h2>
+        <ul class="portifolio-itens">
+          <li class="grid-8">
+            <img src="/img/portfolio/retro.jpg" alt="Bicicleta Retro" />
+          </li>
+          <li class="grid-8">
+            <img src="/img/portfolio/passeio.jpg" alt="Bicicleta Passeio" />
+          </li>
+          <li class="grid-8">
+            <img src="/img/portfolio/esporte.jpg" alt="Bicicleta Esporte" />
+          </li>
+        </ul>
+        <div class="call">
+          <p>clique aqui e veja</p>
+          <a href="portifolio.html" class="btn">Portifólio</a>
+        </div>
+      </div>
+    </section>
+
+	<section class="qualidade container">
+		<h2 class="subbtitulo sub-titulo">Qualidade</h2>
+		<img src="/img//bikcraft-qualidade.svg" alt="Bickcraft">
+		<ul class="qualidade-itens">
 			<li class="grid-1-3">
-				<div class="produtos-icone">
-					<img src="/img/produtos/passeio.svg" alt="Bikecraf passeio">
-				</div>
-				<h3>Passeio</h3>
-				<p>ainda assim, existem dúvidas a respeito de como a necessidade de renovação- texto ficticio </p>
+				<h3>Durabilidade</h3>
+				<p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem</p>
 			</li>
-		</ul>		
-		<ul class="produtos-lista">
 			<li class="grid-1-3">
-				<div class="produtos-icone">
-					<img src="/img/produtos/esporte.svg" alt="Bikecraf passeio">
-				</div>
-				<h3>Esporte</h3>
-				<p>ainda assim, existem dúvidas a respeito de como a necessidade de renovação- texto ficticio </p>
+				<h3>Design</h3>
+				<p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem</p>
 			</li>
-		</ul>
-		<ul class="produtos-lista">
 			<li class="grid-1-3">
-				<div class="produtos-icone">
-					<img src="/img/produtos/retro.svg" alt="Bikecraf passeio">
-				</div>
-				<h3>Retrô</h3>
-				<p>ainda assim, existem dúvidas a respeito de como a necessidade de renovação- texto ficticio </p>
+				<h3>Sustentabilidade</h3>
+				<p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem</p>
 			</li>
 		</ul>
 		<div class="call">
 			<p>clique aqui e veja</p>
-			<a href="produtos.html" class="btn btn-black">Produtos</a>
-		</div>
+			<a href="sobre.html" class="btn btn-black">Sobre</a>
+		  </div>
 	</section>
 
-	<section class="portifolio">
-		<div class="container">
-			<h2 class="subtitulo sub-titulo">Portifólio</h2>
-			<ul class="portifolio-itens">
-				<li class="grid-8"><img src="/img/portfolio/retro.jpg" alt="Bicicleta Retro"></li>
-				<li class="grid-8"><img src="/img/portfolio/passeio.jpg" alt="Bicicleta Passeio"></li>
-				<li class="grid-8"><img src="/img/portfolio/esporte.jpg" alt="Bicicleta Esporte"></li>
-			</ul>
-			<div class="call">
-				<p>clique aqui e veja</p>
-				<a href="portifolio.html" class="btn ">Portifólio</a>
-			</div>
-		</div>
-	</section>
-	</body>
+  </body>
 </html>
